# egcode

./: README.md
.github/workflows/: webapp.yml
egcode/: Cargo.toml  README.md
egcode-cli/: Cargo.toml
egcode-cli/src/: main.rs
egcode-ffi/: Cargo.toml
egcode-ffi/src/: lib.rs
egcode/src/: chacha.rs  decrypt.rs  encrypt.rs  hkdf.rs  hmac.rs  lib.rs  pbkdf2.rs
examples/pc/: Cargo.toml  README.md
examples/pc/src/: main.rs
examples/pico/: Cargo.toml  README.md  memory.x  rust-toolchain.toml
examples/pico/.helix/: languages.toml
examples/pico/src/: main.rs  rp_sha2.rs
examples/pico_sd/: Cargo.toml  README.md  sha_msg_format.md
examples/pico_sd/src/: main.rs  rp_sha2.rs
examples/pico_sd/src/rp/: hmac.rs  mod.rs  sha2.rs
webapp/: 404.html  Cargo.toml  Trunk.toml  index.html
webapp/.cargo/: config.toml
webapp/src/: decrypt.rs  download.rs  encrypt.rs  index.rs  main.rs  navbar.rs  utils.rs
