[package]
name = "egcode-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
egcode = "0.1"
clap = {
  version = "4",
  features = ["derive"]
}
anyhow = "1"
rand_core = {
  version = "0.6",
  features = ["getrandom"]
}
embedded-io-adapters = {
  version = "0.7",
  features = ["std"]
}
futures = "0.3"
sha2 = {
  version = "0.11",
}
hex = "0.4"
