[package]
name = "egcode"
version = "0.0.2"
edition = "2024"
license = "MIT"
authors = ["James Gopsill"]
description = "no_std async streaming encrypt/decrypt tooling for gcode."
repository = "https://github.com/jamesgopsill/egcode"
readme = "README.md"
keywords = ["gcode", "manufacturing", "cryptography"]
categories = ["no-std", "embedded", "cryptography", "wasm"]
exclude = ["test-data"]

[lib]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]

[dependencies]
x25519-dalek = {
  version = "2",
  default-features = false,
  features = ["static_secrets"]
}
chacha20poly1305 = {
  version = "0.10",
  default-features = false,
  features = ["stream"]
}
rand_core = "0.6"
hkdf = {
  version = "0.12",
  default-features = false
}
sha2 = {
  version = "0.10",
  default-features = false
}
hmac = {
  version = "0.12",
  default-features = false
}
embedded-io = "0.7"
futures = {
  version = "0.3",
  default-features = false
}

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
embedded-io-adapters = { version = "0.7", features = ["std"] }
futures = "0.3"
