[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_error_panic_hook = "0.1"
web-sys = {
  version = "0.3",
  features = [
    "HtmlInputElement",
    "FileList",
    "File",
    "Navigator",
    "Serial",
    "SerialPort",
    "Window",
    "SerialOptions",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "BlobPropertyBag"
  ]
}
futures = "0.3"
gloo-timers = { version="0.4", features = ["futures"] }
# Encryption deps
hex = "0.4"
# Public Private Kay Pairs and Shared Key Derivation
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
rand_core = "0.6"
getrandom = { version = "0.2", features = ["js"] }
embedded-io-adapters = { version = "0.7", features = ["std"] }
egcode = { path = "../egcode" }
