[package]
name = "pc"
version = "0.1.0"
edition = "2024"

[dependencies]
egcode = {
  path = "../../egcode"
}
rand_core = {
  version = "0.6",
  features = ["getrandom"]
}
embedded-io-adapters = {
  version = "0.7",
  features = ["std"]
}
futures = "0.3"
sha2 = {
  version = "0.11"
}
x25519-dalek = {
  version = "2",
  features = ["static_secrets"]
}
