[package]
name = "pico_example"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[profile.release]
debug = true

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = { version = "1" }
defmt-rtt = { version = "1" }
panic-probe = { version = "1", features = ["print-defmt"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = {
  version = "0.10",
  features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info"
  ]
}
embassy-time = {
  version = "0.5",
  features = ["defmt"]
}
egcode = { path = "../../egcode" }
x25519-dalek = {
  version = "2",
  default-features = false,
  features = ["static_secrets"]
}
sha2 = {
  version = "0.11",
  default-features = false
}
digest = {
  version = "0.11",
  default-features = false,
  features = ["block-api"]
}
embedded-io = "0.7"
